--- a/Uke 36/Background.html
+++ b/Uke 36/Background.html
@@ -41,11 +41,35 @@
             background-size: cover;
             background-position: center center;
             animation: slideIt 8s infinite;
+            display: flex;
+            justify-content: center;
+            align-items:center;
+            text-align: center;
+        }
+
+        section {
+            color: snow;
+            text-shadow: 2px 2px 2px black;
+            text-transform: uppercase;
+            font-family: "Trebuchet MS" , sans-sherif;
+        }
+        h1 {
+            font-size: 48px;
+
+        }
+        p {
+            font-size: 40px;
         }
 
     </style>
 </head>
 <body>
+
+    <section>
+        <h1>OP</h1>
+        <p>R. Zoro</p>
+    </section>
+
 
 </body>
 </html>
