--- a/Lekse_til_22_sep/index2.html
+++ b/Lekse_til_22_sep/index2.html
@@ -38,7 +38,7 @@
             top: 400px;
             right: 800px;
         }
-        <img src="../../../../Downloads/night-sky-hd-wallpaper.jpg"/></style>
+        <img src="../../../../Downloads/night-sky-hd-wallpaper.jpg"></style>
 </head>
 <body>
 <section>
