--- a/Min_Nettside/Code_geass.html
+++ b/Min_Nettside/Code_geass.html
@@ -3,21 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Startside</title>
+    <title>Code Geass</title>
     <link href="https://fonts.googleapis.com/css?family=Caveat" rel="stylesheet">
     <style>
-        input[type=text] {
-            width: 130px;
-            -webkit-transition: width 0.4s ease-in-out;
-            transition: width 0.4s ease-in-out;
-        }
-
-        /* When the input field gets focus, change its width to 100% */
-        input[type=text]:focus {
-            width: 100%;
-        }
-
-
 
         #cb {
             display: none;
@@ -40,7 +28,7 @@
         }
         #menu {
             width: 300px;
-            background-color: darkblue;
+            background-color: rebeccapurple;
             position: absolute;
             top: 50px;
             left: -300px;
@@ -78,7 +66,7 @@
             overflow: hidden;
         }
         body > footer {
-            background-color: darkblue;
+            background-color: rebeccapurple;
         }
 
         body > header > nav {
@@ -94,7 +82,7 @@
             color: lightslategrey;
         }
         .active {
-            background-color: darkblue;
+            background-color: rebeccapurple;
             color: white;
         }
         body > footer {
@@ -114,7 +102,7 @@
             align-items: center;  /* vertikal */
             justify-items: center;      /* horisontal */
             text-align: center;
-            background-image: url("Bilder/Top6Animes.png");
+            background-image: url("Bilder/code_geass8.jpg");
             background-size: cover;
             background-position: right top;
 
@@ -135,7 +123,7 @@
             padding: 15px 30px;
             color: white;
             text-decoration: none;
-            background-color: darkblue;
+            background-color: rebeccapurple;
 
         }
 
@@ -152,7 +140,7 @@
             font-family: sans-serif;
             padding-left: 20px;
             padding-right: 20px;
-            color: #9bb8db;
+            color: white;
 
         }
         h3 {
@@ -180,25 +168,26 @@
 
         </label>
         <nav id="menu">
-            <h3>Om nettsiden</h3>
+            <h3>Code Geass</h3>
 
-            <p> Det finnes flere tusener av Anime's og dette er noen av mine favoritter. Det er alt fra ninja-dominerte verdener
-            fult av overnaturlige krefter, serier der man følger antagonisten som har onde formål, til serier der man følger
-            skoleelver gjennom deres nokså vanlige hverdag. </p>
+            <p>Dette er en Anime bestående av 2 sesonger, der den tredje sesongen skulle ha kommet i løpet av 2017, men
+            er forventet i tidlig 2018 (på japansk m/engelske sub-titles).</p>
 
-            <p>Grunnen til at jeg ser på sånne serier er fordi jeg er fasinert
-            av tegnestilen og deres evne til å animere noe så kult.</p>
+            <p>Handler om Lelouch Vi Brittania som er en vidregående elev som plutselig får en mystisk magisk evne plantet i øyet
+            sitt av en enda mer mystisk jente, C2. Han finner snart ut av at disse kreftene kan brukes til hans fordel i oppdraget
+            hans for å revolusjonere "area 11" (Japan) og fri dem fra Brittania.</p>
 
-            <p>Nettsiden inneholder noen Anime's jeg har sett og som jeg kan en del om, samt en liten nettside dedikert
-            til favoritt klubben, FCB.</p>
+            <p>Dette er en interessant serie der protagonisten er både protagonist og antagonist.</p>
+
+
         </nav>
-        <a href="Index.html" class="active">Anime</a>
+        <a href="Index.html">Anime</a>
         <a href="Hyouka.html" >Hyouka</a>
         <a href="Naruto.html">Naruto</a>
         <a href="Death_note.html">Death Note</a>
         <a href="Kimagure.html">Kimagure</a>
         <a href="Tokyo_ghoul.html">Tokyo Ghoul</a>
-        <a href="Code_geass.html">Code Geass</a>
+        <a href="Code_geass.html" class="active">Code Geass</a>
 
     </nav>
 </header>
@@ -209,13 +198,8 @@
 
     </section>
     <footer>
+        <a href="http://codegeass.wikia.com/wiki/Code_Geass_Wiki">Mer om Code Geass: L.O.T.R</a>
 
-        <form action="http://www.crunchyroll.com/search?o=m&r=t&q=">
-            <input type="text" name="q">
-            <button type="submit">Søk på en anime</button>
-        </form>
-
-    </footer>
 </main>
 
 <footer>
@@ -227,11 +211,11 @@
         </a>
     </div>
     <div>
-    <p>For fotball</p>
+        <p>For fotball</p>
         <p><––––––</p>
     </div>
     <div>
-    <p>For anime</p>
+        <p>For anime</p>
         <p>––––––></p>
     </div>
     <div>
