--- a/Min_Nettside/Death_note.html
+++ b/Min_Nettside/Death_note.html
@@ -3,20 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Startside</title>
+    <title>Death Note</title>
     <link href="https://fonts.googleapis.com/css?family=Caveat" rel="stylesheet">
     <style>
-        input[type=text] {
-            width: 130px;
-            -webkit-transition: width 0.4s ease-in-out;
-            transition: width 0.4s ease-in-out;
-        }
-
-        /* When the input field gets focus, change its width to 100% */
-        input[type=text]:focus {
-            width: 100%;
-        }
-
 
 
         #cb {
@@ -40,7 +29,7 @@
         }
         #menu {
             width: 300px;
-            background-color: darkblue;
+            background-color: black;
             position: absolute;
             top: 50px;
             left: -300px;
@@ -78,7 +67,7 @@
             overflow: hidden;
         }
         body > footer {
-            background-color: darkblue;
+            background-color: black;
         }
 
         body > header > nav {
@@ -94,7 +83,7 @@
             color: lightslategrey;
         }
         .active {
-            background-color: darkblue;
+            background-color: black;
             color: white;
         }
         body > footer {
@@ -114,7 +103,7 @@
             align-items: center;  /* vertikal */
             justify-items: center;      /* horisontal */
             text-align: center;
-            background-image: url("Bilder/Top6Animes.png");
+            background-image: url("Bilder/light.png");
             background-size: cover;
             background-position: right top;
 
@@ -135,7 +124,7 @@
             padding: 15px 30px;
             color: white;
             text-decoration: none;
-            background-color: darkblue;
+            background-color: black;
 
         }
 
@@ -152,17 +141,17 @@
             font-family: sans-serif;
             padding-left: 20px;
             padding-right: 20px;
-            color: #9bb8db;
+            color: white;
+            font-size: 13px;
 
         }
         h3 {
             text-align: center;
             font-family: sans-serif;
-            color: #eeeeee;
+            color: white;
         }
         body > footer > p {
-            color: #eeeeee;
-            -moz-text-size-adjust: auto;
+            color: white;
         }
 
     </style>
@@ -180,22 +169,23 @@
 
         </label>
         <nav id="menu">
-            <h3>Om nettsiden</h3>
+            <h3>Death Note</h3>
 
-            <p> Det finnes flere tusener av Anime's og dette er noen av mine favoritter. Det er alt fra ninja-dominerte verdener
-            fult av overnaturlige krefter, serier der man følger antagonisten som har onde formål, til serier der man følger
-            skoleelver gjennom deres nokså vanlige hverdag. </p>
+            <p>Death Note er en anime og en manga, med 37 episoder (2 sesonger) samt to filmer i anime versjon. Det er også
+            laget en "live action" film, i Hollywood, med ekte mennesker (men denne har fått dårlig tilbakemelding fra fans.</p>
 
-            <p>Grunnen til at jeg ser på sånne serier er fordi jeg er fasinert
-            av tegnestilen og deres evne til å animere noe så kult.</p>
+            <p>Men en hel verden blir snudd på hodet når Light Yagami finner en mystisk bok kalt "Death Note", som hevder at den har
+            evner til å drepe hvem som helst, om man skriver navnet til vedkommende i boken. Light tror ikke på dette, men
+            vil fortsatt prøve. Light faller dypere og dypere inn i en mørk verden han skaper selv, omtåken av sin egen
+            syke tørst for å dømme hvem som har rett og galt, hvem som skal leve og død.</p>
 
-            <p>Nettsiden inneholder noen Anime's jeg har sett og som jeg kan en del om, samt en liten nettside dedikert
-            til favoritt klubben, FCB.</p>
+            <p>"L, do you know? Gods of death loves apples"</p>
+
         </nav>
-        <a href="Index.html" class="active">Anime</a>
-        <a href="Hyouka.html" >Hyouka</a>
+        <a href="Index.html" >Anime</a>
+        <a href="Hyouka.html">Hyouka</a>
         <a href="Naruto.html">Naruto</a>
-        <a href="Death_note.html">Death Note</a>
+        <a href="Death_note.html" class="active">Death Note</a>
         <a href="Kimagure.html">Kimagure</a>
         <a href="Tokyo_ghoul.html">Tokyo Ghoul</a>
         <a href="Code_geass.html">Code Geass</a>
@@ -209,41 +199,41 @@
 
     </section>
     <footer>
-
-        <form action="http://www.crunchyroll.com/search?o=m&r=t&q=">
-            <input type="text" name="q">
-            <button type="submit">Søk på en anime</button>
-        </form>
-
+        <a href="http://deathnote.wikia.com/wiki/Death_Note_(anime)">Mer om Death Note</a>
     </footer>
 </main>
 
 <footer>
-
 
     <div>
         <a href="FCB.html">
             <img src="Bilder/Artboard%201%20copy%202.png">
         </a>
     </div>
+
     <div>
-    <p>For fotball</p>
+        <p>For fotball</p>
         <p><––––––</p>
     </div>
     <div>
-    <p>For anime</p>
+        <p>For anime</p>
         <p>––––––></p>
     </div>
+
     <div>
         <a href="Index.html">
             <img src="Bilder/Artboard%201%20copy%203.png">
         </a>
     </div>
 
-
 </footer>
 
 
+
+</body>
+</html>
+</head>
+<body>
 
 </body>
 </html>
