--- a/Min_Nettside/Hyouka.html
+++ b/Min_Nettside/Hyouka.html
@@ -3,20 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Startside</title>
+    <title>Hyouka</title>
     <link href="https://fonts.googleapis.com/css?family=Caveat" rel="stylesheet">
     <style>
-        input[type=text] {
-            width: 130px;
-            -webkit-transition: width 0.4s ease-in-out;
-            transition: width 0.4s ease-in-out;
-        }
-
-        /* When the input field gets focus, change its width to 100% */
-        input[type=text]:focus {
-            width: 100%;
-        }
-
 
 
         #cb {
@@ -40,7 +29,7 @@
         }
         #menu {
             width: 300px;
-            background-color: darkblue;
+            background-color: darkslateblue;
             position: absolute;
             top: 50px;
             left: -300px;
@@ -78,7 +67,7 @@
             overflow: hidden;
         }
         body > footer {
-            background-color: darkblue;
+            background-color: darkslateblue;
         }
 
         body > header > nav {
@@ -94,7 +83,7 @@
             color: lightslategrey;
         }
         .active {
-            background-color: darkblue;
+            background-color: darkslateblue;
             color: white;
         }
         body > footer {
@@ -114,7 +103,7 @@
             align-items: center;  /* vertikal */
             justify-items: center;      /* horisontal */
             text-align: center;
-            background-image: url("Bilder/Top6Animes.png");
+            background-image: url("Bilder/Oreki og Chitanda.jpg");
             background-size: cover;
             background-position: right top;
 
@@ -135,7 +124,7 @@
             padding: 15px 30px;
             color: white;
             text-decoration: none;
-            background-color: darkblue;
+            background-color: darkslateblue;
 
         }
 
@@ -153,6 +142,7 @@
             padding-left: 20px;
             padding-right: 20px;
             color: #9bb8db;
+            font-size: 13px;
 
         }
         h3 {
@@ -162,7 +152,6 @@
         }
         body > footer > p {
             color: #eeeeee;
-            -moz-text-size-adjust: auto;
         }
 
     </style>
@@ -180,20 +169,28 @@
 
         </label>
         <nav id="menu">
-            <h3>Om nettsiden</h3>
+            <h3>Hyouka</h3>
 
-            <p> Det finnes flere tusener av Anime's og dette er noen av mine favoritter. Det er alt fra ninja-dominerte verdener
-            fult av overnaturlige krefter, serier der man følger antagonisten som har onde formål, til serier der man følger
-            skoleelver gjennom deres nokså vanlige hverdag. </p>
+            <p>Hyouka er en Anime basert på en bok som ble utgitt i 2001. Animasjonen kom først på TV i 2012.</p>
 
-            <p>Grunnen til at jeg ser på sånne serier er fordi jeg er fasinert
-            av tegnestilen og deres evne til å animere noe så kult.</p>
+            <p>Episoder: 22 (på japansk m/sub)</p>
 
-            <p>Nettsiden inneholder noen Anime's jeg har sett og som jeg kan en del om, samt en liten nettside dedikert
-            til favoritt klubben, FCB.</p>
+            <p>Handler om Houtarou Oreki, en gutt som vil leve noe han kaller "et energi konservativt liv", der mottoet hans er
+            "alltid spar energi om du kan, om du absolutt må gjøre noe, gjør det raskt".</p>
+
+            <p>Alt dette forandrer seg snart når Houtarou begynner på Kimiyama videregående og melder seg inn i gamleklubben
+            til storesøsteren sin, "Koten-bu" (Classics club), for å redde klubben fra å bli fjernet (grunnet for få medlemmer).</p>
+
+            <p>Houtarou møter Chitanda Eru som tydelig viser stor innteresse i Houtarou sine mystiske evner til å løse mysterier.
+            Houtarou blir gang på gang kastet inn i nye mysterier hver gang han hører Chitanda si den kjente frasen sin:</p>
+
+            <p>"Watashi wa kininarimasu!"</p>
+
+            <p></p>
+
         </nav>
-        <a href="Index.html" class="active">Anime</a>
-        <a href="Hyouka.html" >Hyouka</a>
+        <a href="Index.html" >Anime</a>
+        <a href="Hyouka.html" class="active">Hyouka</a>
         <a href="Naruto.html">Naruto</a>
         <a href="Death_note.html">Death Note</a>
         <a href="Kimagure.html">Kimagure</a>
@@ -209,41 +206,41 @@
 
     </section>
     <footer>
-
-        <form action="http://www.crunchyroll.com/search?o=m&r=t&q=">
-            <input type="text" name="q">
-            <button type="submit">Søk på en anime</button>
-        </form>
-
+        <a href="https://myanimelist.net/anime/12189/Hyouka">Les mer</a>
     </footer>
 </main>
 
 <footer>
-
 
     <div>
         <a href="FCB.html">
             <img src="Bilder/Artboard%201%20copy%202.png">
         </a>
     </div>
+
     <div>
-    <p>For fotball</p>
+        <p>For fotball</p>
         <p><––––––</p>
     </div>
     <div>
-    <p>For anime</p>
+        <p>For anime</p>
         <p>––––––></p>
     </div>
+
     <div>
         <a href="Index.html">
             <img src="Bilder/Artboard%201%20copy%203.png">
         </a>
     </div>
 
-
 </footer>
 
 
+
+</body>
+</html>
+</head>
+<body>
 
 </body>
 </html>
