--- a/Min_Nettside/Naruto.html
+++ b/Min_Nettside/Naruto.html
@@ -3,20 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Startside</title>
+    <title>Naruto</title>
     <link href="https://fonts.googleapis.com/css?family=Caveat" rel="stylesheet">
     <style>
-        input[type=text] {
-            width: 130px;
-            -webkit-transition: width 0.4s ease-in-out;
-            transition: width 0.4s ease-in-out;
-        }
-
-        /* When the input field gets focus, change its width to 100% */
-        input[type=text]:focus {
-            width: 100%;
-        }
-
 
 
         #cb {
@@ -40,7 +29,7 @@
         }
         #menu {
             width: 300px;
-            background-color: darkblue;
+            background-color: darkorange;
             position: absolute;
             top: 50px;
             left: -300px;
@@ -78,7 +67,7 @@
             overflow: hidden;
         }
         body > footer {
-            background-color: darkblue;
+            background-color: darkorange;
         }
 
         body > header > nav {
@@ -94,7 +83,7 @@
             color: lightslategrey;
         }
         .active {
-            background-color: darkblue;
+            background-color: darkorange;
             color: white;
         }
         body > footer {
@@ -114,7 +103,7 @@
             align-items: center;  /* vertikal */
             justify-items: center;      /* horisontal */
             text-align: center;
-            background-image: url("Bilder/Top6Animes.png");
+            background-image: url("Bilder/Uzumaki_family.jpeg");
             background-size: cover;
             background-position: right top;
 
@@ -133,9 +122,9 @@
         }
         main a {
             padding: 15px 30px;
-            color: white;
+            color: black;
             text-decoration: none;
-            background-color: darkblue;
+            background-color: darkorange;
 
         }
 
@@ -152,17 +141,17 @@
             font-family: sans-serif;
             padding-left: 20px;
             padding-right: 20px;
-            color: #9bb8db;
+            color: black;
+            font-size: 13px;
 
         }
         h3 {
             text-align: center;
             font-family: sans-serif;
-            color: #eeeeee;
+            color: black;
         }
         body > footer > p {
             color: #eeeeee;
-            -moz-text-size-adjust: auto;
         }
 
     </style>
@@ -180,21 +169,25 @@
 
         </label>
         <nav id="menu">
-            <h3>Om nettsiden</h3>
+            <h3>Naruto</h3>
 
-            <p> Det finnes flere tusener av Anime's og dette er noen av mine favoritter. Det er alt fra ninja-dominerte verdener
-            fult av overnaturlige krefter, serier der man følger antagonisten som har onde formål, til serier der man følger
-            skoleelver gjennom deres nokså vanlige hverdag. </p>
+            <p>Naruto er både en 700 volumers manga og en 720 episoders anime</p>
 
-            <p>Grunnen til at jeg ser på sånne serier er fordi jeg er fasinert
-            av tegnestilen og deres evne til å animere noe så kult.</p>
+            <p>Sønnen til Naruto, Boruto, er nå protagonisten i det nye "Boruto; Naruto next generations" som har, per
+            15.desember, 37 episoder. Det kommer en ny episode hver uke på Crunchyroll. Click på knappen for link til
+            serien.</p>
 
-            <p>Nettsiden inneholder noen Anime's jeg har sett og som jeg kan en del om, samt en liten nettside dedikert
-            til favoritt klubben, FCB.</p>
+            <p>Naruto handler om den foreldreløse gutten, Naruto Uzumaki som bor i "the hidden leaf village" eller "Konohagakure".
+            Naruto drømmer om å bli "Hokage" som er den mest annerkjente ninjaen i landsbyen, og han drømmer da å bli respektert
+            av de andre i byen.</p>
+
+            <p>Dessverre respekterer ikke de andre i landsbyen hans han, grunnet at det dveller en mørk og ond skapning, fanget
+            i kroppen til Naruto. Han selv har ingen kunnskap om dette, men når han finner ut av dette braker helvete løs.</p>
+
         </nav>
-        <a href="Index.html" class="active">Anime</a>
-        <a href="Hyouka.html" >Hyouka</a>
-        <a href="Naruto.html">Naruto</a>
+        <a href="Index.html" >Anime</a>
+        <a href="Hyouka.html">Hyouka</a>
+        <a href="Naruto.html" class="active">Naruto</a>
         <a href="Death_note.html">Death Note</a>
         <a href="Kimagure.html">Kimagure</a>
         <a href="Tokyo_ghoul.html">Tokyo Ghoul</a>
@@ -209,41 +202,43 @@
 
     </section>
     <footer>
-
-        <form action="http://www.crunchyroll.com/search?o=m&r=t&q=">
-            <input type="text" name="q">
-            <button type="submit">Søk på en anime</button>
-        </form>
-
+        <a href="http://www.crunchyroll.com/naruto-shippuden">Naruto Shippuden</a>
+        <a href="http://www.crunchyroll.com/naruto">Naruto Shonen Jump</a>
+        <a href="http://www.crunchyroll.com/boruto-naruto-next-generations">Boruto</a>
     </footer>
 </main>
 
 <footer>
-
 
     <div>
         <a href="FCB.html">
             <img src="Bilder/Artboard%201%20copy%202.png">
         </a>
     </div>
+
     <div>
-    <p>For fotball</p>
+        <p>For fotball</p>
         <p><––––––</p>
     </div>
     <div>
-    <p>For anime</p>
+        <p>For anime</p>
         <p>––––––></p>
     </div>
+
     <div>
         <a href="Index.html">
             <img src="Bilder/Artboard%201%20copy%203.png">
         </a>
     </div>
 
-
 </footer>
 
 
+
+</body>
+</html>
+</head>
+<body>
 
 </body>
 </html>
