--- a/Min_Nettside/Tokyo_ghoul.html
+++ b/Min_Nettside/Tokyo_ghoul.html
@@ -3,20 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Startside</title>
+    <title>Tokyo Ghoul</title>
     <link href="https://fonts.googleapis.com/css?family=Caveat" rel="stylesheet">
     <style>
-        input[type=text] {
-            width: 130px;
-            -webkit-transition: width 0.4s ease-in-out;
-            transition: width 0.4s ease-in-out;
-        }
-
-        /* When the input field gets focus, change its width to 100% */
-        input[type=text]:focus {
-            width: 100%;
-        }
-
 
 
         #cb {
@@ -34,13 +23,13 @@
             cursor: pointer;
         }
         #burger > div {
-            background-color: black;
+            background-color: #330000;
             height: 2px;
             transition: 0.1s;
         }
         #menu {
             width: 300px;
-            background-color: darkblue;
+            background-color: #330000;
             position: absolute;
             top: 50px;
             left: -300px;
@@ -78,7 +67,7 @@
             overflow: hidden;
         }
         body > footer {
-            background-color: darkblue;
+            background-color: #330000;
         }
 
         body > header > nav {
@@ -94,7 +83,7 @@
             color: lightslategrey;
         }
         .active {
-            background-color: darkblue;
+            background-color: #330000;
             color: white;
         }
         body > footer {
@@ -114,7 +103,7 @@
             align-items: center;  /* vertikal */
             justify-items: center;      /* horisontal */
             text-align: center;
-            background-image: url("Bilder/Top6Animes.png");
+            background-image: url("Bilder/Ken_kaneki_slide.jpg");
             background-size: cover;
             background-position: right top;
 
@@ -135,7 +124,7 @@
             padding: 15px 30px;
             color: white;
             text-decoration: none;
-            background-color: darkblue;
+            background-color: #330000;
 
         }
 
@@ -152,17 +141,17 @@
             font-family: sans-serif;
             padding-left: 20px;
             padding-right: 20px;
-            color: #9bb8db;
+            color: white;
+            font-size: 13px;
 
         }
         h3 {
             text-align: center;
             font-family: sans-serif;
-            color: #eeeeee;
+            color: white;
         }
         body > footer > p {
-            color: #eeeeee;
-            -moz-text-size-adjust: auto;
+            color: white;
         }
 
     </style>
@@ -180,24 +169,27 @@
 
         </label>
         <nav id="menu">
-            <h3>Om nettsiden</h3>
+            <h3>Tokyo Ghoul</h3>
 
-            <p> Det finnes flere tusener av Anime's og dette er noen av mine favoritter. Det er alt fra ninja-dominerte verdener
-            fult av overnaturlige krefter, serier der man følger antagonisten som har onde formål, til serier der man følger
-            skoleelver gjennom deres nokså vanlige hverdag. </p>
+            <p>Tokyo Ghoul er en veldig mørk og grotesk serie, men som er tegnet og animert på en fantastisk måte (min mening).
+            Alt stemme skuespillerene (på Japansk!) og musikken, til art stylen og animasjonen er helt perfekt. Historien er
+            også utrolig følelsespakket.</p>
 
-            <p>Grunnen til at jeg ser på sånne serier er fordi jeg er fasinert
-            av tegnestilen og deres evne til å animere noe så kult.</p>
+            <p>Blant mennesker bor det "Ghouls", dette er skapninger som er like mennesker i utseende, men de MÅ spise mennesker
+            for å overleve. Kroppen deres tillater dem ikke å spise noe annet, da dør de. Dette er selvfølgelig problematisk, og
+            det er mye motstant mot disse skapningene. Men det folk overseer, er at de også er levende vesner. De går til de samme
+            skolene, har familier, venner og hobbier. De kan ikke noe for at de må spise menneskekjøtt for å overleve. Hva skal
+            Ken Kaneki gjøre? En vanlig menneskegutt som våkner opp etter en operasjon og finner ut av at han er halv-menneske,
+            halv-ghoul blir kastet inn i en mørk verden der han prøver å finne seg selv. Finner han svaret?</p>
 
-            <p>Nettsiden inneholder noen Anime's jeg har sett og som jeg kan en del om, samt en liten nettside dedikert
-            til favoritt klubben, FCB.</p>
+
         </nav>
-        <a href="Index.html" class="active">Anime</a>
-        <a href="Hyouka.html" >Hyouka</a>
+        <a href="Index.html" >Anime</a>
+        <a href="Hyouka.html">Hyouka</a>
         <a href="Naruto.html">Naruto</a>
         <a href="Death_note.html">Death Note</a>
         <a href="Kimagure.html">Kimagure</a>
-        <a href="Tokyo_ghoul.html">Tokyo Ghoul</a>
+        <a href="Tokyo_ghoul.html" class="active">Tokyo Ghoul</a>
         <a href="Code_geass.html">Code Geass</a>
 
     </nav>
@@ -209,41 +201,41 @@
 
     </section>
     <footer>
-
-        <form action="http://www.crunchyroll.com/search?o=m&r=t&q=">
-            <input type="text" name="q">
-            <button type="submit">Søk på en anime</button>
-        </form>
-
+        <a href="http://tokyoghoul.wikia.com/wiki/Tokyo_Ghoul_(anime)">Mer om Tokyo Ghoul</a>
     </footer>
 </main>
 
 <footer>
-
 
     <div>
         <a href="FCB.html">
             <img src="Bilder/Artboard%201%20copy%202.png">
         </a>
     </div>
+
     <div>
-    <p>For fotball</p>
+        <p>For fotball</p>
         <p><––––––</p>
     </div>
     <div>
-    <p>For anime</p>
+        <p>For anime</p>
         <p>––––––></p>
     </div>
+
     <div>
         <a href="Index.html">
             <img src="Bilder/Artboard%201%20copy%203.png">
         </a>
     </div>
 
-
 </footer>
 
 
+
+</body>
+</html>
+</head>
+<body>
 
 </body>
 </html>
