--- a/Min_Nettside/Kimagure.html
+++ b/Min_Nettside/Kimagure.html
@@ -3,20 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Startside</title>
+    <title>Kimagure O.R</title>
     <link href="https://fonts.googleapis.com/css?family=Caveat" rel="stylesheet">
     <style>
-        input[type=text] {
-            width: 130px;
-            -webkit-transition: width 0.4s ease-in-out;
-            transition: width 0.4s ease-in-out;
-        }
-
-        /* When the input field gets focus, change its width to 100% */
-        input[type=text]:focus {
-            width: 100%;
-        }
-
 
 
         #cb {
@@ -40,7 +29,7 @@
         }
         #menu {
             width: 300px;
-            background-color: darkblue;
+            background-color: lightgreen;
             position: absolute;
             top: 50px;
             left: -300px;
@@ -78,7 +67,7 @@
             overflow: hidden;
         }
         body > footer {
-            background-color: darkblue;
+            background-color: lightgreen;
         }
 
         body > header > nav {
@@ -94,7 +83,7 @@
             color: lightslategrey;
         }
         .active {
-            background-color: darkblue;
+            background-color: lightgreen;
             color: white;
         }
         body > footer {
@@ -114,9 +103,9 @@
             align-items: center;  /* vertikal */
             justify-items: center;      /* horisontal */
             text-align: center;
-            background-image: url("Bilder/Top6Animes.png");
+            background-image: url("Bilder/Kimagure.Orange.Road.full.457661.jpg");
             background-size: cover;
-            background-position: right top;
+            background-position: top right;
 
         }
         main h1 {
@@ -133,9 +122,9 @@
         }
         main a {
             padding: 15px 30px;
-            color: white;
+            color: black;
             text-decoration: none;
-            background-color: darkblue;
+            background-color: lightgreen;
 
         }
 
@@ -152,17 +141,17 @@
             font-family: sans-serif;
             padding-left: 20px;
             padding-right: 20px;
-            color: #9bb8db;
+            color: black;
+            font-size: 13px;
 
         }
         h3 {
             text-align: center;
             font-family: sans-serif;
-            color: #eeeeee;
+            color: black;
         }
         body > footer > p {
-            color: #eeeeee;
-            -moz-text-size-adjust: auto;
+            color: black;
         }
 
     </style>
@@ -180,23 +169,26 @@
 
         </label>
         <nav id="menu">
-            <h3>Om nettsiden</h3>
+            <h3>Kimagure Orange Road</h3>
 
-            <p> Det finnes flere tusener av Anime's og dette er noen av mine favoritter. Det er alt fra ninja-dominerte verdener
-            fult av overnaturlige krefter, serier der man følger antagonisten som har onde formål, til serier der man følger
-            skoleelver gjennom deres nokså vanlige hverdag. </p>
+            <p>Kyosuke Kasuga flytter til en ny by, grunnet at han og hans familie måtte flytte fra den forrige de bodde i
+            fordi de brukte deres "power". Familien består av Kasuga, Kurumi, Manami og faren deres. Faren har ingen "power"
+            men alle barna er "espers" (psykiske superkrefter).</p>
 
-            <p>Grunnen til at jeg ser på sånne serier er fordi jeg er fasinert
-            av tegnestilen og deres evne til å animere noe så kult.</p>
+            <p>Kasuga møter Madoka Ayukawa, og blir forelsket med første blikk. Han finner ut av at de er i samme klasse
+            og her får han også sine to venner, Hatta og Komatsu. Kasuga blir mer og mer interessert i Ayukawa, men det er
+            en annen jente som er interessert i ham. Ved et uhell ender Kasuga opp med å kysse Hikaru, som er ett år yngere
+            enn ham selv. Hun blir forelsket i ham, og Kasuga ender opp i et trekant drama der han ikke klarer å være tydelig
+            på hvem han egentlig liker. Hikaru eller Ayukawa.</p>
 
-            <p>Nettsiden inneholder noen Anime's jeg har sett og som jeg kan en del om, samt en liten nettside dedikert
-            til favoritt klubben, FCB.</p>
+
+
         </nav>
-        <a href="Index.html" class="active">Anime</a>
-        <a href="Hyouka.html" >Hyouka</a>
+        <a href="Index.html" >Anime</a>
+        <a href="Hyouka.html">Hyouka</a>
         <a href="Naruto.html">Naruto</a>
         <a href="Death_note.html">Death Note</a>
-        <a href="Kimagure.html">Kimagure</a>
+        <a href="Kimagure.html" class="active">Kimagure</a>
         <a href="Tokyo_ghoul.html">Tokyo Ghoul</a>
         <a href="Code_geass.html">Code Geass</a>
 
@@ -209,41 +201,42 @@
 
     </section>
     <footer>
-
-        <form action="http://www.crunchyroll.com/search?o=m&r=t&q=">
-            <input type="text" name="q">
-            <button type="submit">Søk på en anime</button>
-        </form>
+        <a href="https://www.animenewsnetwork.com/feature/2017-03-03/30-years-of-kimagure-orange-road/.112950">Mer om Kimagure O.R</a>
 
     </footer>
 </main>
 
 <footer>
 
-
     <div>
         <a href="FCB.html">
             <img src="Bilder/Artboard%201%20copy%202.png">
         </a>
     </div>
+
     <div>
-    <p>For fotball</p>
+        <p>For fotball</p>
         <p><––––––</p>
     </div>
     <div>
-    <p>For anime</p>
+        <p>For anime</p>
         <p>––––––></p>
     </div>
+
     <div>
         <a href="Index.html">
             <img src="Bilder/Artboard%201%20copy%203.png">
         </a>
     </div>
 
-
 </footer>
 
 
+
+</body>
+</html>
+</head>
+<body>
 
 </body>
 </html>
