--- a/Min_Nettside/Hyouka.html
+++ b/Min_Nettside/Hyouka.html
@@ -73,7 +73,7 @@
         body > header > nav {
             display: grid;
 
-            grid-template-columns: 60px 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+            grid-template-columns: 60px 1fr 1fr 1fr 1fr 1fr 1fr;
             /* grid-auto-flow: column; */
         }
         body > header > nav > a {
@@ -142,7 +142,7 @@
             padding-left: 20px;
             padding-right: 20px;
             color: #9bb8db;
-            font-size: 13px;
+
 
         }
         h3 {
@@ -170,30 +170,16 @@
         </label>
         <nav id="menu">
             <h3>Hyouka</h3>
-
-            <p>Hyouka er en Anime basert på en bok som ble utgitt i 2001. Animasjonen kom først på TV i 2012.</p>
-
-            <p>Episoder: 22 (på japansk m/sub)</p>
-
-            <p>Handler om Houtarou Oreki, en gutt som vil leve noe han kaller "et energi konservativt liv", der mottoet hans er
-            "alltid spar energi om du kan, om du absolutt må gjøre noe, gjør det raskt".</p>
-
-            <p>Alt dette forandrer seg snart når Houtarou begynner på Kimiyama videregående og melder seg inn i gamleklubben
-            til storesøsteren sin, "Koten-bu" (Classics club), for å redde klubben fra å bli fjernet (grunnet for få medlemmer).</p>
-
-            <p>Houtarou møter Chitanda Eru som tydelig viser stor innteresse i Houtarou sine mystiske evner til å løse mysterier.
-            Houtarou blir gang på gang kastet inn i nye mysterier hver gang han hører Chitanda si den kjente frasen sin:</p>
-
-            <p>"Watashi wa kininarimasu!"</p>
-
-            <p></p>
+            <p>Sjanger: Slice of life</p>
+            <p>Episoder: 22 (alle er på japansk)</p>
+            <p>Air-time: April 2012 - Aeptember 2012</p>
+            <p>Oreki Hōtarō & Eru Chitanda</p>
 
         </nav>
         <a href="Index.html" >Anime</a>
         <a href="Hyouka.html" class="active">Hyouka</a>
         <a href="Naruto.html">Naruto</a>
         <a href="Death_note.html">Death Note</a>
-        <a href="Kimagure.html">Kimagure</a>
         <a href="Tokyo_ghoul.html">Tokyo Ghoul</a>
         <a href="Code_geass.html">Code Geass</a>
 
@@ -212,20 +198,7 @@
 
 <footer>
 
-    <div>
-        <a href="FCB.html">
-            <img src="Bilder/Artboard%201%20copy%202.png">
-        </a>
-    </div>
 
-    <div>
-        <p>For fotball</p>
-        <p><––––––</p>
-    </div>
-    <div>
-        <p>For anime</p>
-        <p>––––––></p>
-    </div>
 
     <div>
         <a href="Index.html">
