--- a/Min_Nettside/Naruto.html
+++ b/Min_Nettside/Naruto.html
@@ -73,7 +73,7 @@
         body > header > nav {
             display: grid;
 
-            grid-template-columns: 60px 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+            grid-template-columns: 60px 1fr 1fr 1fr 1fr 1fr 1fr;
             /* grid-auto-flow: column; */
         }
         body > header > nav > a {
@@ -142,7 +142,7 @@
             padding-left: 20px;
             padding-right: 20px;
             color: black;
-            font-size: 13px;
+
 
         }
         h3 {
@@ -170,26 +170,17 @@
         </label>
         <nav id="menu">
             <h3>Naruto</h3>
-
-            <p>Naruto er både en 700 volumers manga og en 720 episoders anime</p>
-
-            <p>Sønnen til Naruto, Boruto, er nå protagonisten i det nye "Boruto; Naruto next generations" som har, per
-            15.desember, 37 episoder. Det kommer en ny episode hver uke på Crunchyroll. Click på knappen for link til
-            serien.</p>
-
-            <p>Naruto handler om den foreldreløse gutten, Naruto Uzumaki som bor i "the hidden leaf village" eller "Konohagakure".
-            Naruto drømmer om å bli "Hokage" som er den mest annerkjente ninjaen i landsbyen, og han drømmer da å bli respektert
-            av de andre i byen.</p>
-
-            <p>Dessverre respekterer ikke de andre i landsbyen hans han, grunnet at det dveller en mørk og ond skapning, fanget
-            i kroppen til Naruto. Han selv har ingen kunnskap om dette, men når han finner ut av dette braker helvete løs.</p>
+            <p>Sjanger: Eventyrfiksjon (fantasy)</p>
+            <p>Episoder: 720, delt i 2 (200 + 500), på 26 sesonger</p>
+            <p>Air-time: Oktober 2002 - Mars 2017</p>
+            <p>Protagonister: Naruto Uzumaki & Sasuke Uchiha</p>
 
         </nav>
         <a href="Index.html" >Anime</a>
         <a href="Hyouka.html">Hyouka</a>
         <a href="Naruto.html" class="active">Naruto</a>
         <a href="Death_note.html">Death Note</a>
-        <a href="Kimagure.html">Kimagure</a>
+
         <a href="Tokyo_ghoul.html">Tokyo Ghoul</a>
         <a href="Code_geass.html">Code Geass</a>
 
@@ -209,22 +200,6 @@
 </main>
 
 <footer>
-
-    <div>
-        <a href="FCB.html">
-            <img src="Bilder/Artboard%201%20copy%202.png">
-        </a>
-    </div>
-
-    <div>
-        <p>For fotball</p>
-        <p><––––––</p>
-    </div>
-    <div>
-        <p>For anime</p>
-        <p>––––––></p>
-    </div>
-
     <div>
         <a href="Index.html">
             <img src="Bilder/Artboard%201%20copy%203.png">
