--- a/Min_Nettside/Tokyo_ghoul.html
+++ b/Min_Nettside/Tokyo_ghoul.html
@@ -73,7 +73,7 @@
         body > header > nav {
             display: grid;
 
-            grid-template-columns: 60px 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+            grid-template-columns: 60px 1fr 1fr 1fr 1fr 1fr 1fr;
             /* grid-auto-flow: column; */
         }
         body > header > nav > a {
@@ -142,7 +142,7 @@
             padding-left: 20px;
             padding-right: 20px;
             color: white;
-            font-size: 13px;
+
 
         }
         h3 {
@@ -170,17 +170,10 @@
         </label>
         <nav id="menu">
             <h3>Tokyo Ghoul</h3>
-
-            <p>Tokyo Ghoul er en veldig mørk og grotesk serie, men som er tegnet og animert på en fantastisk måte (min mening).
-            Alt stemme skuespillerene (på Japansk!) og musikken, til art stylen og animasjonen er helt perfekt. Historien er
-            også utrolig følelsespakket.</p>
-
-            <p>Blant mennesker bor det "Ghouls", dette er skapninger som er like mennesker i utseende, men de MÅ spise mennesker
-            for å overleve. Kroppen deres tillater dem ikke å spise noe annet, da dør de. Dette er selvfølgelig problematisk, og
-            det er mye motstant mot disse skapningene. Men det folk overseer, er at de også er levende vesner. De går til de samme
-            skolene, har familier, venner og hobbier. De kan ikke noe for at de må spise menneskekjøtt for å overleve. Hva skal
-            Ken Kaneki gjøre? En vanlig menneskegutt som våkner opp etter en operasjon og finner ut av at han er halv-menneske,
-            halv-ghoul blir kastet inn i en mørk verden der han prøver å finne seg selv. Finner han svaret?</p>
+            <p>Sjanger: Mørk fiksjon, Grøsser</p>
+            <p>Episoder: 24, på to sesonger</p>
+            <p>Air-time: Juli 2014 - Mars 2015</p>
+            <p>Protagonist: Ken Kaneki</p>
 
 
         </nav>
@@ -188,7 +181,6 @@
         <a href="Hyouka.html">Hyouka</a>
         <a href="Naruto.html">Naruto</a>
         <a href="Death_note.html">Death Note</a>
-        <a href="Kimagure.html">Kimagure</a>
         <a href="Tokyo_ghoul.html" class="active">Tokyo Ghoul</a>
         <a href="Code_geass.html">Code Geass</a>
 
@@ -207,20 +199,6 @@
 
 <footer>
 
-    <div>
-        <a href="FCB.html">
-            <img src="Bilder/Artboard%201%20copy%202.png">
-        </a>
-    </div>
-
-    <div>
-        <p>For fotball</p>
-        <p><––––––</p>
-    </div>
-    <div>
-        <p>For anime</p>
-        <p>––––––></p>
-    </div>
 
     <div>
         <a href="Index.html">
