--- a/Min_Nettside/Code_geass.html
+++ b/Min_Nettside/Code_geass.html
@@ -72,7 +72,7 @@
         body > header > nav {
             display: grid;
 
-            grid-template-columns: 60px 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+            grid-template-columns: 60px 1fr 1fr 1fr 1fr 1fr 1fr;
             /* grid-auto-flow: column; */
         }
         body > header > nav > a {
@@ -169,23 +169,16 @@
         </label>
         <nav id="menu">
             <h3>Code Geass</h3>
-
-            <p>Dette er en Anime bestående av 2 sesonger, der den tredje sesongen skulle ha kommet i løpet av 2017, men
-            er forventet i tidlig 2018 (på japansk m/engelske sub-titles).</p>
-
-            <p>Handler om Lelouch Vi Brittania som er en vidregående elev som plutselig får en mystisk magisk evne plantet i øyet
-            sitt av en enda mer mystisk jente, C2. Han finner snart ut av at disse kreftene kan brukes til hans fordel i oppdraget
-            hans for å revolusjonere "area 11" (Japan) og fri dem fra Brittania.</p>
-
-            <p>Dette er en interessant serie der protagonisten er både protagonist og antagonist.</p>
-
+            <p>Sjanger: Mecha (framtid m/avansert tech)</p>
+            <p>Episoder: 25, på 2 sesonger</p>
+            <p>Air-time: Oktober 2006 - September 2008</p>
+            <p>Protagonist: Lelouch Lamperouge (født Lelouch vi Britannia)</p>
 
         </nav>
         <a href="Index.html">Anime</a>
         <a href="Hyouka.html" >Hyouka</a>
         <a href="Naruto.html">Naruto</a>
         <a href="Death_note.html">Death Note</a>
-        <a href="Kimagure.html">Kimagure</a>
         <a href="Tokyo_ghoul.html">Tokyo Ghoul</a>
         <a href="Code_geass.html" class="active">Code Geass</a>
 
@@ -198,26 +191,14 @@
 
     </section>
     <footer>
-        <a href="http://codegeass.wikia.com/wiki/Code_Geass_Wiki">Mer om Code Geass: L.O.T.R</a>
+        <a href="http://codegeass.wikia.com/wiki/Code_Geass_Wiki">Mer om Code Geass: Lelouch of the rebellion</a>
 
 </main>
 
 <footer>
 
 
-    <div>
-        <a href="FCB.html">
-            <img src="Bilder/Artboard%201%20copy%202.png">
-        </a>
-    </div>
-    <div>
-        <p>For fotball</p>
-        <p><––––––</p>
-    </div>
-    <div>
-        <p>For anime</p>
-        <p>––––––></p>
-    </div>
+
     <div>
         <a href="Index.html">
             <img src="Bilder/Artboard%201%20copy%203.png">
