--- a/Min_Nettside/Death_note.html
+++ b/Min_Nettside/Death_note.html
@@ -73,7 +73,7 @@
         body > header > nav {
             display: grid;
 
-            grid-template-columns: 60px 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+            grid-template-columns: 60px 1fr 1fr 1fr 1fr 1fr 1fr;
             /* grid-auto-flow: column; */
         }
         body > header > nav > a {
@@ -142,7 +142,7 @@
             padding-left: 20px;
             padding-right: 20px;
             color: white;
-            font-size: 13px;
+
 
         }
         h3 {
@@ -170,23 +170,16 @@
         </label>
         <nav id="menu">
             <h3>Death Note</h3>
-
-            <p>Death Note er en anime og en manga, med 37 episoder (2 sesonger) samt to filmer i anime versjon. Det er også
-            laget en "live action" film, i Hollywood, med ekte mennesker (men denne har fått dårlig tilbakemelding fra fans.</p>
-
-            <p>Men en hel verden blir snudd på hodet når Light Yagami finner en mystisk bok kalt "Death Note", som hevder at den har
-            evner til å drepe hvem som helst, om man skriver navnet til vedkommende i boken. Light tror ikke på dette, men
-            vil fortsatt prøve. Light faller dypere og dypere inn i en mørk verden han skaper selv, omtåken av sin egen
-            syke tørst for å dømme hvem som har rett og galt, hvem som skal leve og død.</p>
-
-            <p>"L, do you know? Gods of death loves apples"</p>
+            <p>Sjanger: Krimfiksjon (grøsser)</p>
+            <p>Episoder: 37, 1 sesong</p>
+            <p>Air-time: Oktober 2006 - Juni 2007</p>
+            <p>Protagonister: Light Yagumi, L Lawliet & Misa Amane</p>
 
         </nav>
         <a href="Index.html" >Anime</a>
         <a href="Hyouka.html">Hyouka</a>
         <a href="Naruto.html">Naruto</a>
         <a href="Death_note.html" class="active">Death Note</a>
-        <a href="Kimagure.html">Kimagure</a>
         <a href="Tokyo_ghoul.html">Tokyo Ghoul</a>
         <a href="Code_geass.html">Code Geass</a>
 
@@ -204,21 +197,6 @@
 </main>
 
 <footer>
-
-    <div>
-        <a href="FCB.html">
-            <img src="Bilder/Artboard%201%20copy%202.png">
-        </a>
-    </div>
-
-    <div>
-        <p>For fotball</p>
-        <p><––––––</p>
-    </div>
-    <div>
-        <p>For anime</p>
-        <p>––––––></p>
-    </div>
 
     <div>
         <a href="Index.html">
