--- a/Min_Nettside/Index.html
+++ b/Min_Nettside/Index.html
@@ -84,7 +84,7 @@
         body > header > nav {
             display: grid;
 
-            grid-template-columns: 60px 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+            grid-template-columns: 60px 1fr 1fr 1fr 1fr 1fr 1fr;
             /* grid-auto-flow: column; */
         }
         body > header > nav > a {
@@ -180,23 +180,17 @@
 
         </label>
         <nav id="menu">
-            <h3>Om nettsiden</h3>
+        <h3>Innhold</h3>
+            <p>Sjanger på serien</p>
+            <p>Episoder i sesongen(e)</p>
+            <p>Release date (og air-time)</p>
+            <p>Protagonisten(e)s navn</p>
 
-            <p> Det finnes flere tusener av Anime's og dette er noen av mine favoritter. Det er alt fra ninja-dominerte verdener
-            fult av overnaturlige krefter, serier der man følger antagonisten som har onde formål, til serier der man følger
-            skoleelver gjennom deres nokså vanlige hverdag. </p>
-
-            <p>Grunnen til at jeg ser på sånne serier er fordi jeg er fasinert
-            av tegnestilen og deres evne til å animere noe så kult.</p>
-
-            <p>Nettsiden inneholder noen Anime's jeg har sett og som jeg kan en del om, samt en liten nettside dedikert
-            til favoritt klubben, FCB.</p>
         </nav>
         <a href="Index.html" class="active">Anime</a>
         <a href="Hyouka.html" >Hyouka</a>
         <a href="Naruto.html">Naruto</a>
         <a href="Death_note.html">Death Note</a>
-        <a href="Kimagure.html">Kimagure</a>
         <a href="Tokyo_ghoul.html">Tokyo Ghoul</a>
         <a href="Code_geass.html">Code Geass</a>
 
@@ -221,19 +215,6 @@
 <footer>
 
 
-    <div>
-        <a href="FCB.html">
-            <img src="Bilder/Artboard%201%20copy%202.png">
-        </a>
-    </div>
-    <div>
-    <p>For fotball</p>
-        <p><––––––</p>
-    </div>
-    <div>
-    <p>For anime</p>
-        <p>––––––></p>
-    </div>
     <div>
         <a href="Index.html">
             <img src="Bilder/Artboard%201%20copy%203.png">
