--- a/Min_Nettside/Index.html
+++ b/Min_Nettside/Index.html
@@ -63,7 +63,7 @@
         body {
             font-family:'Caveat', cursive;
             margin: 0;
-            min-height: 100vh;
+            min-height: 100%;
             display: grid;
             grid-template-rows: auto 1fr auto;
 
