--- a/IT2/uke 35/Index2.html
+++ b/IT2/uke 35/Index2.html
@@ -7,7 +7,7 @@
 
     <style>
         body {
-            background-image: url("figur2rektangel.svg");
+            background-image: url("https://media.studieportalen.dk/images/cmspages/Kompendier/matematik%20formelsamling/Andengradsligning/figur2rektangel.svg");
         }
 
 
