--- a/IT2/Quiz_Prosjekt/quiz.html
+++ b/IT2/Quiz_Prosjekt/quiz.html
@@ -11,7 +11,7 @@
 
 
 <body>
-<h1>Ting A(dam)lle burde kunne ;)</h1>
+<h1>Big 14 vet hva som skjer</h1>
 
 
 <form id = "quiz" name = "quiz">
@@ -32,6 +32,18 @@
     <input type = "radio" id = "dab" name = "sporsmaal3" value = "nei"> nei<br>
     <input type = "radio" id = "dab" name = "sporsmaal3" value = "er det no sak?"> er det no sak?<br>
 
+    <p class = "sporsmaal">Hva heter denne koselige sangen?</p>
+    <input id = "tekstboks2" type = "text" name = "sporsmaal4">
+    <audio controls>
+        <source src="mp3/kimagure-orange-road-ending-3-dance-in-the-memories.mp3" type="audio/mpeg">
+
+    </audio>
+
+    <div id="quiz2">
+       <p>Placeholdertekst</p>
+    </div>
+
+
 
     <input id = "button" type = "button" value = "Lever Quiz" onclick = "check();">
 
@@ -43,6 +55,8 @@
     <p id = "varsler"></p>
     <img id = "bilde">
 </div>
+
+<div id="rødt"></div>
 </body>
 </html>
 
